--- a/package.json
+++ b/package.json
@@ -3,17 +3,20 @@
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "express": "^4.16.3",
+    "jest": "^25.3.0",
     "jsonschema": "^1.2.4",
     "locus": "^2.0.1",
+    "nodemon": "^2.0.3",
     "pg": "^7.5.0",
     "supertest": "^3.3.0"
-  }
+  },
+  "description": ""
 }
